split prod and dev webpack config ; add babel

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,6 @@
   <body>
     <canvas id="renderCanvas"></canvas>
     <img src="./public/img/pic.png">
-    <p>Ga zo</p>
+    <p>Ga zo bug</p>
   </body>
 </html>
