--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/cannon.js"></script>
   </head>
   <body>
     <canvas id="renderCanvas"></canvas>
