Add Core/Level/component/state base

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,9 +5,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/babylon.js"></script>
     <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/cannon.js"></script>
+            <!--<script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>-->
   </head>
   <body>
-    <canvas id="renderCanvas"></canvas>
+    <canvas id="renderCanvas" touch-action="none"></canvas>
     <img src="./public/img/pic.png">
     <p>Ga zo bug</p>
   </body>
