--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
-    <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/babylon.js"></script>
-    <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/cannon.js"></script>
-            <!--<script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
-        <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>-->
-  </head>
-  <body>
-    <canvas id="renderCanvas" touch-action="none"></canvas>
-    <img src="./public/img/pic.png">
-    <p>Ga zo bug</p>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>
+    <%= htmlWebpackPlugin.options.title %>
+  </title>
+  <!--
+      <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/cannon.js"></script>
+      <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
+      <script language="javascript" type="text/javascript" src="https://cdn.babylonjs.com/inspector/babylon.inspector.min.js"></script>
+      <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
+<script language="javascript" type="text/javascript" src="./public/babylon.gui.min.js"></script>
+<script language="javascript" type="text/javascript" src="./public/babylon.inspector.min.js"></script>
+
+    -->
+</head>
+
+
+<body>
+  <canvas id="renderCanvas" touch-action="none"></canvas>
+  <img src="./public/img/pic.png">
+  <p>Ga zo bug</p>
+</body>
+
 </html>
